# database-applications-project

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
ab_project/: db.py  logging_setup.py  main.py  pull_from_usos.py  usos_loader.py
ab_project/config/: config.py  config_example.ini
ab_project/frontend/: USOS_Main.py
ab_project/frontend/pages/: 1_User_management.py  2_Group_management.py  3_Room_reservation.py  3_Statistics.py  4_Miscellaneous.py  4_Statistics.py
sql_scripts/: README.md  functions.sql  grant.sql  procedury.sql  tables.sql
src/python_scripts/: db.py  db_schema.py  db_utils.py  logging_setup.py  main.py  pull_from_usos.py
src/python_scripts/frontend/pages/: User management.py  Users.py
src/sql_scripts/: README.md  functions.sql  procedury.sql  tables.sql
