[tool.poetry]
name = "ab-project"
version = "0.1.0"
description = ""
authors = ["Vitalii Morskyi <vitalii@morskyi.dev>"]
readme = "README.md"
packages = [{include = "ab_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
psycopg2-binary = "^2.9.5"
rauth = "^0.7.3"
requests = "^2.28.1"
SQLAlchemy = "^1.4.44"
pytz = "^2022.6"
streamlit = "^1.15.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
